--- a/01-principes.Rmd
+++ b/01-principes.Rmd
@@ -6,7 +6,7 @@ Dans ce chapitre, on pose les bases en faisant quelques rappels de probabilité 
 
 ## Le théorème de Bayes
 
-Ne tardons plus et entrons dans le vif du sujet. La statistique bayésienne repose sur le théorème de Bayes (ou formule, ou loi, selon ce que vous préférez), nommé d'après le révérend Thomas Bayes. Ce théorème a été publié en 1763, deux ans après la mort de Bayes grâce aux efforts de son ami Richard Price, et a été découvert indépendamment par Pierre-Simon Laplace.
+Ne tardons plus et entrons dans le vif du sujet. La statistique bayésienne repose sur le théorème de Bayes (ou formule, selon ce que vous préférez), nommé d'après le révérend Thomas Bayes. Ce théorème a été publié en 1763, deux ans après la mort de Bayes grâce aux efforts de son ami Richard Price, et a été découvert indépendamment par Pierre-Simon Laplace.
 
 Comme nous allons le voir dans un instant, le théorème de Bayes porte sur les probabilités conditionnelles, qui sont parfois un peu délicates à comprendre. La probabilité conditionnelle d'un événement A sachant un événement B, que l'on note $\Pr(A \mid B)$, est la probabilité que A se produise, révisée en tenant compte de l'information supplémentaire que l'événement B s'est produit. Par exemple, imaginez qu'un de vos amis lance un dé (équilibré) et vous demande la probabilité que le résultat soit un six (A). Votre réponse est 1/6 car chaque face du dé a la même chance d'apparaître. Maintenant, imaginez que l'on vous dise que le nombre obtenu est pair (B) avant de répondre. Comme il n'y a que trois nombres pairs, dont un seul est six, vous pouvez réviser votre réponse : $\Pr(A \mid B) = 1/3$.
 
@@ -67,7 +67,7 @@ Vous vous dites sûrement qu’avec ces éléments, on peut déjà estimer une p
 
 Comme mentionné plus haut, la vraisemblance est une idée centrale qu'on retrouve dans les approches fréquentiste et bayésienne. Commençons donc par construire cette vraisemblance. Pour cela, il nous faut poser quelques hypothèses.
 
-Premièrement, nous supposons que les individus sont indépendants, c’est-à-dire que la survie d'un ragondin n’influence pas la survie des autres ragondins. C’est une hypothèse forte, surtout quand on sait qu’une femelle peut se reproduire 2 à 3 fois par an et donner naissance à jusqu’à 10 petits dépendants d’elle au début de leur vie. Mais en modélisation, il vaut souvent mieux commencer simplement.
+Premièrement, nous supposons que les individus sont indépendants, c’est-à-dire que la survie d'un ragondin n’influence pas la survie des autres ragondins. C’est une hypothèse forte, surtout quand on sait qu’une femelle peut se reproduire 2 à 3 fois par an et donner naissance jusqu’à 10 petits dépendants d’elle au début de leur vie. Mais en modélisation, il vaut souvent mieux commencer simplement.
 
 Deuxièmement, nous supposons que tous les individus ont la même probabilité de survie. Là encore, c’est une simplification : on sait, par exemple, que la mortalité des jeunes est plus élevée que celle des adultes.
 
@@ -319,7 +319,7 @@ df %>%
 
 Chaque panneau de la figure montre la forme d'une loi bêta pour un couple de paramètres $(a, b)$ donné. On peut y observer plusieurs comportements caractéristiques.
 
-- Beta(1,1) (en haut à gauche) correspond à une loi uniforme : toutes les valeurs de $\theta$ entre 0 et 1 sont considérées comme également probables. La densité est constante, ce qui signifie que la probabilité d’observer une valeur entre 0.1 et 0.2 est la même que celle d’en observer une entre 0.8 et 0.9. Cette probabilité est l’aire du rectangle délimité par le trait rouge et les lignes verticales calées à 0.1 et 0.2 ou 0.8 et 0.9 (les zones ombrées en rouge). On a une situation d’absence de connaissance a priori.
+- Beta(1,1) (en haut à gauche) correspond à la loi uniforme entre 0 et 1 : toutes les valeurs de $\theta$ entre 0 et 1 sont considérées comme également probables. La densité est constante, ce qui signifie que la probabilité d’observer une valeur entre 0.1 et 0.2 est la même que celle d’en observer une entre 0.8 et 0.9. Cette probabilité est l’aire du rectangle délimité par le trait rouge et les lignes verticales calées à 0.1 et 0.2 ou 0.8 et 0.9 (les zones ombrées en rouge). On a une situation d’absence de connaissance a priori.
 - Beta(2,1) et Beta(1,2) représentent des connaissances asymétriques : la première est biaisée vers des valeurs proches de 1, la seconde vers des valeurs proches de 0. La probabilité d’observer une valeur entre 0.1 et 0.2 est plus petite que celle d’en observer une entre 0.8 et 0.9, et vice-versa.
 - Beta(2,2) est symétrique, mais donne plus de poids aux valeurs centrales qu'une loi uniforme. La probabilité d’observer une valeur entre 0.1 et 0.2 est plus petite que celle d’en observer une entre 0.5 et 0.6.
 - Beta(10,10) représente une connaissance très concentrée autour de 0.5 : c’est un prior très informatif. La probabilité d’observer une valeur entre 0.2 et 0.3 est beaucoup plus petite que celle d’en observer une entre 0.5 et 0.6.
@@ -336,7 +336,7 @@ $$
 \end{aligned}
 $$
 
-Autrement dit, on retrouve donc une loi bêta, avec des paramètres mis à jour $a + y$ et $b + n - y$. On dit que la loi binomiale et la loi bêta sont conjuguées : lorsque l'on utilise une loi bêta comme distribution a priori pour un paramètre de probabilité dans un modèle binomial, la loi a posteriori obtenue est également une loi bêta. Si on utilise une loi uniforme a priori (i.e. Beta(1,1)), on obtient que la distribution a posteriori de la survie hivernale est une $\text{Beta}(1+19, 1+57-19) = \text{Beta}(20, 39)$. Au passage, la distribution a posteriori est connue, ce qui facilite grandement les calculs et leur interprétation. Par exemple, on sait que la moyenne de la $\text{Beta}(a, b)$ est $\displaystyle \frac{a}{a+b}$, soit  $\frac{20}{59} \approx 0.339$. On peut comparer cette valeur à l'estimateur du maximum de vraisemblance $19/57 \approx 0.333$. On peut également visualiser la distribution a posteriori comme dans la Figure \@ref(fig:posterior-survie), puisqu'on connait l'équation de la densité d'une loi Bêta :
+Autrement dit, on retrouve une loi bêta, avec des paramètres mis à jour $a + y$ et $b + n - y$. On dit que la loi binomiale et la loi bêta sont conjuguées : lorsque l'on utilise une loi bêta comme distribution a priori pour un paramètre de probabilité dans un modèle binomial, la loi a posteriori obtenue est également une loi bêta. Si on utilise une loi uniforme a priori (i.e. Beta(1,1)), on obtient que la distribution a posteriori de la survie hivernale est une $\text{Beta}(1+19, 1+57-19) = \text{Beta}(20, 39)$. Au passage, la distribution a posteriori est connue, ce qui facilite grandement les calculs et leur interprétation. Par exemple, on sait que la moyenne de la $\text{Beta}(a, b)$ est $\displaystyle \frac{a}{a+b}$, soit  $\frac{20}{59} \approx 0.339$. On peut comparer cette valeur à l'estimateur du maximum de vraisemblance $19/57 \approx 0.333$. On peut également visualiser la distribution a posteriori comme dans la Figure \@ref(fig:posterior-survie), puisqu'on connait l'équation de la densité d'une loi Bêta :
 
 ```{r posterior-survie, echo = FALSE, fig.cap = "Distribution a priori uniforme (rouge) et distribution a posteriori (noire) de la probabilité de survie hivernale du ragondin. La ligne bleue pointillée correspond à l'estimateur du maximum de vraisemblance.", dpi = 600}
 df_post <- data.frame(
