--- a/index.Rmd
+++ b/index.Rmd
@@ -84,7 +84,7 @@ Dans le Chapitre \@ref(lms), nous verrons comment faire une régression linéair
 
 Le Chapitre \@ref(glms) nous emmènera vers les modèles linéaires généralisés, avec ou sans effets aléatoires - des modèles très utilisés en pratique. On s'appuiera sur la simulation de données, un outil précieux pour bien comprendre ce que fait un modèle. Je vous montrerai comment faire ces analyses avec `brms` (et avec `NIMBLE` dans la version enrichie en ligne) et on comparera à l'analyse fréquentiste.
 
-Enfin, un dernier chapitre viendra résumer les messages clés du livre et proposer quelques conseils pour appliquer la statistique bayésienne de manière rigoureuse et éclairée.
+Enfin, un dernier chapitre viendra résumer les messages clés du livre et proposer quelques conseils pour appliquer la statistique bayésienne.
 
 ## Comment lire ce livre ? {-}
 
